# aws-sagemaker-pipeline

./: .gitignore  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
data-platform/cdk/config/: index.ts
data-platform/cdk/lib/: retail-data-satck.ts
data/input/: hyperparameters.json
ml-platform/cdk/configs/: index.ts
ml-platform/cdk/lib/: sagemaker-pipeline-stack.ts  sagemaker-studio-stack.ts
ml-platform/src/processing/: Dockerfile  pyproject.toml
ml-platform/src/processing/core/: data_preprocessing.py  fs_repository_interface.py  main.py
ml-platform/src/testing/: .env  pyproject.toml
ml-platform/src/testing/core/: fs_repository_interface.py  main.py  model_validator.py
ml-platform/src/training/: .env  pyproject.toml
ml-platform/src/training/core/: fs_repository_interface.py  logger.py  main.py  model_trainer.py
ml-platform/src/understanding/: pyproject.toml
ml-platform/src/understanding/core/: data_understander.py  logger.py  main.py  sagemaker_repository_interface.py
shared/cdk/configs/: index.ts
shared/cdk/core/types/: Context.ts
