[project]
name = "processing"
version = "1.0.0"
description = ""
authors = []
requires-python = ">=3.12,<3.13"
dependencies = [
    "rich>=13.9.4,<14",
    "kink>=0.8.1,<0.9",
    "scikit-learn>=1.5.2,<2",
    "fireducks>=1.4.0",
    "pandas>=2.3.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]                      
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]    
packages = ["src/packages/processing"]
