[project]
name = "understanding"
version = "1.0.0"
description = ""
authors = []
requires-python = ">=3.12,<3.13"
dependencies = [
    "rich>=13.9.4,<14",
    "scikit-learn>=1.5.2,<2",
    "matplotlib>=3.10.3",
    "kink>=0.8.1",
    "fireducks>=1.3.3",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
